--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.here">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,11 +15,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Here"
         tools:targetApi="31">
+        <activity
+            android:name=".TrainingActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
         <provider
             android:name="com.here.sdk.engine.InitProvider"
             android:authorities="com.here.sdk.engine.InitProvider"
             android:exported="false"
             tools:node="remove" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
