--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
+//    implementation 'com.takisoft.fix:preference-v7:28.0.0.0'
+
     implementation 'com.google.android.material:material:1.1.0-alpha07'
+//    implementation "androidx.preference:preference-ktx:1.2.0"
 
 
 }
